# EasyDoc

./: .gitignore  README.md  example.json  index.html  pyproject.toml
css/: style.css
easydoc/: easydoc.py
easydoc/template/: index.j2
js/: scripts.js
site/: index.html
site/css/: style.css
site/js/: scripts.js
tests/: test_ezdoc.py
